# trustee

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
config/: trustee.toml  trustee_default.toml
crates/trustee-api/: Cargo.toml
crates/trustee-api/src/: auth.rs  lib.rs  routes.rs  state.rs  tls.rs
crates/trustee-core/: Cargo.toml
crates/trustee-core/src/: config.rs  lib.rs  session.rs  sessions.rs  types.rs
crates/trustee-tui/: CHANGELOG.md  Cargo.toml
crates/trustee-tui/src/: app.rs  event.rs  helpers.rs  lib.rs  render.rs  tui_sink.rs  types.rs  workflow.rs
crates/trustee-upgrade/: CHANGELOG.md  Cargo.toml  upgrade.toml
crates/trustee-upgrade/src/: config.rs  github.rs  lib.rs  main.rs  updater.rs
crates/trustee-web/: Cargo.toml
crates/trustee-web/src/: lib.rs
crates/trustee-web/static/: index.html
docs/: abk-checkpoint-missing-project-issue.md  example.env  trustee-broken.md
docs/UDMH/: UDMH.md  extraction_schema_request.md  issue_mapping.md
docs/UDML/: DataTaxonomy.md  UDML-Guide.md  UDML.md  extraction_schema_request.md  format-selection-question.md  issue_mapping.md  udml-schema.yaml
docs/UDML/URP/: URP.md  URP.schema.json  URP_Design_Request.md
docs/UDML/components/: question.md
docs/UDML/components/GPT5/: SCHEMA.yaml  abk.agent.udml.yaml  abk.checkpoint.udml.yaml  abk.cli.udml.yaml  abk.config.udml.yaml  abk.executor.udml.yaml  abk.lifecycle.udml.yaml  abk.observability.udml.yaml  abk.orchestration.udml.yaml  abk.provider.udml.yaml  cats.udml.yaml  lifecycle-wasm.udml.yaml  provider-wasm.tanbal.udml.yaml  umf.udml.yaml
docs/UDML/components/GPT5-codex/: abk_agent.udml.yaml  abk_checkpoint.udml.yaml  abk_cli.udml.yaml  abk_config.udml.yaml  abk_executor.udml.yaml  abk_lifecycle.udml.yaml  abk_observability.udml.yaml  abk_orchestration.udml.yaml  abk_provider.udml.yaml  cats.udml.yaml  lifecycle_wasm.udml.yaml  provider_wasm_tanbal.udml.yaml  umf.udml.yaml
docs/UDML/components/GPT5-mini/: abk-agent.yaml  abk-checkpoint.yaml  abk-cli.yaml  abk-config.yaml  abk-executor.yaml  abk-lifecycle.yaml  abk-observability.yaml  abk-orchestration.yaml  abk-provider.yaml  cats.yaml  lifecycle-wasm.yaml  provider-wasm-tanbal.yaml  umf.yaml
docs/UDML/components/claude-sonnet-4.5/: abk-agent.udml.yaml  abk-checkpoint.udml.yaml  abk-cli.udml.yaml  abk-config.udml.yaml  abk-executor.udml.yaml  abk-lifecycle.udml.yaml  abk-observability.udml.yaml  abk-orchestration.udml.yaml  abk-provider.udml.yaml  cats.udml.yaml  lifecycle-wasm.udml.yaml  provider-wasm-tanbal.udml.yaml  umf.udml.yaml
docs/UDML/components/claude-sonnet-4.5-haiku/: README.md  abk-agent.udml.yaml  abk-checkpoint.udml.yaml  abk-cli.udml.yaml  abk-config.udml.yaml  abk-executor.udml.yaml  abk-lifecycle.udml.yaml  abk-observability.udml.yaml  abk-orchestration.udml.yaml  abk-provider.udml.yaml  cats.udml.yaml  lifecycle-wasm.udml.yaml  provider-wasm-tanbal.udml.yaml  umf.udml.yaml
docs/UDML/components/gemini-2.5-pro/: abk_agent.yml  abk_checkpoint.yml  abk_cli.yml  abk_config.yml  abk_executor.yml  abk_lifecycle.yml  abk_observability.yml  abk_orchestration.yml  abk_provider.yml  cats.yml  lifecycle_wasm.yml  provider_wasm.yml  umf.yml
docs/UDML/components/grok-code-fast-1/: abk-agent.udml.yaml  abk-checkpoint.udml.yaml  abk-cli.udml.yaml  abk-config.udml.yaml  abk-executor.udml.yaml  abk-lifecycle.udml.yaml  abk-observability.udml.yaml  abk-orchestration.udml.yaml  abk-provider.udml.yaml  cats.udml.yaml  lifecycle-wasm.udml.yaml  provider-wasm-tanbal.udml.yaml  umf.udml.yaml
docs/UDML/schema/: UDML-schema-Claude-haiku-4.5.md  UDML-schema-claude-sonnet-4.5.md  UDML-schema-gemini-2.5-pro.md  UDML-schema-grok-fast-code-1.md  winner.md
docs/coupled/: AGENT_EVOLUTION.md  AGENT_EVOLUTION_Part2.md  AGENT_EVOLUTION_Part3.md  coupling_violations.md  current_data_flow.md  data_flow_diagram.md  data_flow_diagram_claude4.5.md  gpt-5-mini.md  grok-code-fast-1.md  hypothesis_and_current_situation.md  tightly_coupled_hypothesis.md
docs/coupled/AGENT_Evolution/solutions/: claude-sonnet-4.5.md  gpt5-mini.md
docs/coupled/solutions/: claude-opus-4.5.md  gemini-3-pro.md  gpt5-mini.md  gpt5.1.md  grok-code-fast-1.md
extensions/coder-lifecycle/: coder_lifecycle_wasm.wasm  extension.toml
extensions/openai-unofficial/: extension.toml  openai_unofficial_wasm.wasm
extensions/openai-unofficial-wasm/: extension.toml  openai_unofficial_wasm.wasm
schema/: UDML-schema-gpt5-codex.md  UDML-schema-gpt5-mini.md  UDML-schema-gpt5.md
scripts/: native-build.sh
src/: main.rs
