[package]
name = "trustee"
version = "0.1.27"
edition = "2021"
description = "A general-purpose agent that can morph into different specialized agents using WASM lifecycle plugins"
license = "MIT OR Apache-2.0"
authors = ["Podtan Team"]
keywords = ["agent", "ai", "llm", "wasm"]
categories = ["command-line-utilities", "development-tools", "wasm"]
repository = "https://github.com/podtan/trustee"
homepage = "https://trustee.podtan.com"
readme = "README.md"

[[bin]]
name = "trustee"
path = "src/main.rs"

[features]
default = []  # No TUI by default - keeps binary small
tui = ["dep:ratatui", "dep:crossterm", "dep:tokio-util", "dep:trustee-tui"]

[dependencies]
# ABK with registry-mcp for MCP tool aggregation
abk = { version = "0.5.17", features = ["cli", "orchestration", "agent", "observability", "storage-documentdb", "extension", "registry-mcp"] }
# UMF with MCP support
umf = { version = "0.2.4", features = ["streaming", "mcp"] }
# Layered configuration merging (defaults + user overrides)
figment = { version = "0.10", features = ["toml"] }
toml = "0.8"
# Remote encrypted config/secrets
getmyconfig = "0.1.1"
tokio = { version = "1.0", features = ["full"] }

# TUI dependencies (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
tokio-util = { version = "0.7", optional = true }
trustee-tui = { version = "0.1.9", path = "crates/trustee-tui", optional = true }

[workspace]
members = ["crates/trustee-tui"]
resolver = "2"

