[package]
name = "trustee-core"
version = "0.1.4"
edition = "2021"
description = "Core types, session state, and workflow logic for Trustee agent"
license = "MIT OR Apache-2.0"
authors = ["Podtan Team"]
keywords = ["agent", "core"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime support
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
# Error handling
anyhow = "1.0"
# ABK for workflow execution
abk = { version = "0.8.0", features = ["cli", "orchestration", "agent", "observability"] }
# Config parsing
toml = "0.8"
