[package]
name = "trustee-core"
version = "0.1.7"
edition = "2021"
description = "Core types, session state, and workflow logic for Trustee agent"
license = "MIT OR Apache-2.0"
authors = ["Podtan Team"]
keywords = ["agent", "core"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime support
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
# Error handling
anyhow = "1.0"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Date/time (comes transitively from abk but we need it directly)
chrono = { version = "0.4", features = ["serde"] }
# ABK for workflow execution
abk = { version = "0.8.3", features = ["cli", "orchestration", "agent", "observability"] }
# Config parsing
toml = "0.8"
# Structured logging (used by sessions module for debug logging)
tracing = "0.1"
