[package]
name = "trustee-tui"
version = "0.1.13"
edition = "2021"
description = "TUI interface for Trustee agent"
license = "MIT OR Apache-2.0"
authors = ["Podtan Team"]
keywords = ["tui", "terminal", "agent"]
categories = ["command-line-utilities"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"
# Async runtime support
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
# Error handling
anyhow = "1.0"
# ABK for workflow execution
abk = { version = "0.5.22", features = ["cli", "orchestration", "agent", "observability", "extension"] }
# Config parsing for log file path
toml = "0.8"
