[package]
name = "trustee-tui"
version = "0.1.54"
edition = "2021"
description = "TUI interface for Trustee agent"
license = "MIT OR Apache-2.0"
authors = ["Podtan Team"]
keywords = ["tui", "terminal", "agent"]
categories = ["command-line-utilities"]

[dependencies]
# TUI framework
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"
# Async runtime support (for select!/spawn in the event loop)
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
# Config parsing for color settings
toml = "0.8"
# Clipboard support
arboard = "3"
# Unicode handling (for word-wrap column counting)
unicode-width = "0.2"
# Core shared types and workflow logic (brings in abk transitively)
trustee-core = { version = "0.1.0", path = "../trustee-core" }
