[package]
name = "trustee-upgrade"
version = "0.1.1"
edition = "2021"
description = "Self-upgrade tool for Trustee agent binary — downloads and installs the latest GitHub release"
license = "MIT OR Apache-2.0"
authors = ["Podtan Team"]
keywords = ["trustee", "upgrade", "self-update", "github"]
categories = ["command-line-utilities"]
publish = true

[[bin]]
name = "trustee-upgrade"
path = "src/main.rs"

[dependencies]
# Async HTTP client — rustls only, no native-tls/openssl dependency
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Progress bar for downloads
indicatif = "0.18"
# Compression
flate2 = "1.1"
tar = "0.4"
# Stream processing for chunked downloads
futures-util = "0.3"
# Misc
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
hex = "0.4"
# TOML parsing for upgrade config
toml = "0.8"
# SHA-256 verification of downloaded binary
sha2 = "0.11"

[features]
default = []
